# AutoWeeklyAIHandsOnReport

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-25-langgraph-ai-product-review-implementation.md
docs/superpowers/specs/: 2026-05-25-langgraph-ai-product-review-design.md
src/auto_weekly_ai_feedback/: __init__.py  agent.py  cli.py  config.py  filters.py  models.py  reporting.py
src/auto_weekly_ai_feedback/graph/: __init__.py  nodes.py  state.py  workflow.py
tests/: test_filters.py  test_reporting.py  test_workflow.py
